objects/vaultA__c.object
<CustomObject>
    <fields>
        <fullName>vaultN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>vaultN</label>
        <referenceTo>vaultN__c</referenceTo>
        <relationshipLabel>vaultAs</relationshipLabel>
        <relationshipName>vaultAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vaultO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>vaultO</label>
        <referenceTo>vaultO__c</referenceTo>
        <relationshipName>vaultAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vaultP__c</fullName>
        <label>vaultP</label>
        <referenceTo>vaultP__c</referenceTo>
        <relationshipName>vaultAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>vaultA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vaultN__c</columns>
        <columns>vaultO__c</columns>
        <columns>vaultP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vaultAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>